Archive2/ce/83943478958404/output
main.cpp:14:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
1 error generated.
